# haskell-toys

./: README.md  TAGS  haskell-toys.cabal  stack.yaml
app/: ht-image-bitmasks.hs  ht-image-extract-rgb.hs  ht-image-levelmasks.hs  ht-image-xymargs.hs  ht-imageflip.hs  ht-pixel-freqs.hs
src/Toy/: Generic.hs  JuicyPixels.hs
test/: JuicyPixels.hs
