name:                haskell-toys
version:             0.1.1.0
synopsis:            Little command line toys written in Haskell
description:         Please see README.md
homepage:            https://github.com/mjoldfield/haskell-toys
license:             BSD3
license-file:        LICENSE
author:              Martin Oldfield
maintainer:          ex-stack@mjoldfield.com
copyright:           Martin Oldfield
category:            experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy.Generic
                     , Toy.JuicyPixels
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , filepath
                     , either
                     , array
  default-language:    Haskell2010

executable ht-imageflip
  hs-source-dirs:      app
  main-is:             ht-imageflip.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-toys
                     , JuicyPixels
  default-language:    Haskell2010

executable ht-pixel-freqs
  hs-source-dirs:      app
  main-is:             ht-pixel-freqs.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskell-toys
                     , JuicyPixels
  default-language:    Haskell2010

executable ht-image-levelmasks
  hs-source-dirs:      app
  main-is:             ht-image-levelmasks.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskell-toys
                     , JuicyPixels
  default-language:    Haskell2010

executable ht-image-bitmasks
  hs-source-dirs:      app
  main-is:             ht-image-bitmasks.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskell-toys
                     , JuicyPixels
  default-language:    Haskell2010

executable ht-image-extract-rgb
  hs-source-dirs:      app
  main-is:             ht-image-extract-rgb.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskell-toys
                     , JuicyPixels
  default-language:    Haskell2010

test-suite ht-juicypixels-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             JuicyPixels.hs
  build-depends:       base
                     , haskell-toys
                     , JuicyPixels
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mjoldfield/haskell-toys
